docs/ja/2.9/_sources/include/ansible_common_environment_definition_make.rst.txt

| Ansible Execution Agentで実際に使用する例については、「 `Ansible実行環境のカスタマイズ <ansible_ee_custom.html>`_ 」を参照してください。

| ITAをインストールすると、:menuselection:`実行環境定義テンプレート管理` と :menuselection:`パラメータシート「実行環境パラメータ定義」` にpythonモジュールやansible galaxyコレクションが追加できるテンプレートファイルとパラメータ値が登録されます。

#. | :menuselection:`Ansible共通 --> 実行環境定義テンプレート管理` に登録するテンプレートファイルの仕様は以下のとおりです。

   - | ファイルの形式は「Jinja2」です。
   - | ファイルの書式は、ansible-builderで使用する定義ファイル「execution-environment.yml」に準じます。詳細は、 `ansible-builder <https://ansible.readthedocs.io/projects/builder/en/latest/usage/>`_ のマニュアルを参照してください。

#. | ITAインストール時に登録される :menuselection:`パラメータシート「実行環境パラメータ定義」` の項目一覧は以下のとおりです。

   .. figure:: /images/ja/ansible_common/ansible_common_environment_definition_parameter_sheet/ansible_common_environment_definition_parameter_sheet.png
      :width: 800px
      :alt: パラメータシート「実行環境パラメータ定義」


   .. table:: パラメータシート「実行環境パラメータ定義」
      :align: left

      +-----------------------------------+----------------------------------------------------------------------------------------------------------------+-----------+--------------+----------------------------------+
      | 項目                              | 説明                                                                                                           | 入力必須  | 入力方法     | 制約事項                         |
      +===================================+================================================================================================================+===========+==============+==================================+
      | execution_environment_name        | レコードの名称を入力します。                                                                                   | 〇        | 手動入力     | 最大長255バイト                  |
      +-----------------------------------+----------------------------------------------------------------------------------------------------------------+-----------+--------------+----------------------------------+
      | python_requirements_file          | 実行環境（コンテナ）にpipコマンドで追加インストールをしたいPythonパッケージを列挙したファイルを入力します。    | 〇        | ファイル選択 | 最大サイズ 100Mバイト            |
      |                                   |                                                                                                                |           |              | 尚、空ファイルを入力しないで\    |
      |                                   |                                                                                                                |           |              | 下さい。ansible-builder実行時\   |
      |                                   |                                                                                                                |           |              | にエラーになります。             |
      +-----------------------------------+----------------------------------------------------------------------------------------------------------------+-----------+--------------+----------------------------------+
      | galaxy_requirements_file          | 実行環境（コンテナ）にansible-galaxyで追加インストールをしたいコレクションを列挙したファイルを入力します。     | －        | ファイル選択 | 最大サイズ 100Mバイト            |
      |                                   |                                                                                                                |           |              | 尚、空ファイルを入力しないで\    |
      |                                   |                                                                                                                |           |              | 下さい。ansible-builder実行時\   |
      |                                   |                                                                                                                |           |              | にエラーになります。             |
      +-----------------------------------+----------------------------------------------------------------------------------------------------------------+-----------+--------------+----------------------------------+
      | bindep_file                       | 実行環境（コンテナ）にdnfコマンドで追加インストールをしたいLinuxモジュールを列挙したファイルを入力します。     | 〇        | ファイル選択 | 最大サイズ 100Mバイト            |
      |                                   |                                                                                                                |           |              | 尚、空ファイルを入力しないで\    |
      |                                   |                                                                                                                |           |              | 下さい。ansible-builder実行時\   |
      |                                   |                                                                                                                |           |              | にエラーになります。             |
      +-----------------------------------+----------------------------------------------------------------------------------------------------------------+-----------+--------------+----------------------------------+
      | ansible_runner                    | 「ansible_runner」を入力します。                                                                               | 〇        | 手動入力     | 最大長255バイト                  |
      +-----------------------------------+----------------------------------------------------------------------------------------------------------------+-----------+--------------+----------------------------------+
      | image                             | 実行環境（コンテナ）のベースイメージを入力します。                                                             | 〇        | 手動入力     | 最大長255バイト                  |
      |                                   |                                                                                                                |           |              |                                  |
      +-----------------------------------+----------------------------------------------------------------------------------------------------------------+-----------+--------------+----------------------------------+
      | package_manager_path              | パッケージ管理コマンドのパスを入力します。                                                                     | 〇        | 手動入力     | 最大長255バイト                  |
      +-----------------------------------+----------------------------------------------------------------------------------------------------------------+-----------+--------------+----------------------------------+
      

#. | :menuselection:`パラメータシート 「実行環境パラメータ定義」` を新規作成・更新する場合の注意事項
   | :menuselection:`パラメータシート 「実行環境パラメータ定義」` を新規作成・更新する場合の注意事項について以下に列挙します。
   
   #. | パラメータシート名（rest）は、先頭が「execution_environment_parameter_definition_sheet」で始まる名称にしてください。
   #. | 作成対象は、データシートを選択してください。
   #. | パラメータシートの項目に以下の項目を含んでください。

      .. list-table::
         :header-rows: 1
         :align: left

         * - 項目
           - 説明
         * - Rest API用項目名
           - execution_environment_name
         * - 入力値
           - レコード名
         * - 項目タイプ
           - 文字列(単一行)
         * - 最大バイト数
           - 255


   #. | パラメータシート名を入力します。

      .. tip:: | :menuselection:`Ansible共通 --> 実行環境管理` の :menuselection:`実行環境定義名` に表示される情報について補足
         | :menuselection:`実行環境定義名` には下記情報が表示されます。
         | 　　④パラメータシート名／③レコード名「Rest API用項目名：execution_environment_name」


   #. | :menuselection:`Ansible共通 --> 実行環境定義テンプレート管理` に登録したテンプレートファイル内の変数と同名の項目を用意してください。
      | パラメータシートの項目名を変数名、設定値を変数値として、テンプレートファイルに埋め込みます。

      .. image:: /images/ja/diagram/ansible_common_environment_definition_make.png
         :width: 800px
         :align: center
         :alt: 実行環境定義テンプレート管理で使用するテンプレートファイルと実行環境パラメータ定義で使用するパラメータシートの関連図

      | 実行環境定義テンプレート管理で使用するテンプレートファイルと実行環境パラメータ定義で使用するパラメータシートの関連図


.. note:: | **実行環境定義ファイルのPythonをpython3.11に変更し、ローカル実行する場合の注意事項**
   | テンプレートファイルのPythonをpython3.11に更新する場合は、:menuselection:`Ansible共通 --> 機器一覧` に登録されている
   | ローカル実行用の機器「localhost」の :menuselection:`インベントリファイル追加オプション` の ``ansible_python_interpreter`` の値も、
   | ``/usr/bin/python3`` から ``/usr/bin/python3.11`` へ合わせて更新してください。

   e.g.) テンプレートファイルで「python3.11」を指定した場合

   .. code-block:: yaml

      # 実行環境定義テンプレート管理に登録するテンプレートファイルの記述例（一部抜粋）
      # （記載省略）
      dependencies:
        # （記載省略）
        python_interpreter:
          package_system: "python3.11"
          python_path: "/usr/bin/python3.11"

      additional_build_steps:
        append_base:
          - RUN /usr/bin/python3.11 -m pip install --upgrade pip

      # （記載省略）

   .. code-block:: yaml

      # 機器一覧の機器「localhost」のインベントリファイル追加オプションの記述例
      ansible_python_interpreter: /usr/bin/python3.11
      ansible_connection: local

